# raspicat_vla

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md
app/: .gitignore  README.md  pubspec.yaml
app/android/: build.gradle.kts
app/android/app/: build.gradle.kts
app/assets/clip/: README.md
app/assets/models/: README.md
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: action_chunk.dart  camera_image_utils.dart  clip_tokenizer.dart  config.dart  goal.dart  omnivla_engine.dart  preprocessing.dart
app/lib/src/inference/: ort_runner.dart
app/test/: widget_test.dart
docker/: Dockerfile.asyncvla  Dockerfile.asyncvla.jetson  Dockerfile.omnivla  Dockerfile.omnivla.jetson  Dockerfile.real  Dockerfile.sim  Dockerfile.test  run.sh
docs/: USAGE.md  mobile_port_spec.md
docs/superpowers/notes/: 2026-06-18-omnivla-edge-path2.md
docs/superpowers/plans/: 2026-04-29-asyncvla-mvp-wiring.md
proto/: asyncvla.proto  edge_action.proto  raspicat_vla.proto
scripts/: bash.sh  control.py  control.sh  download_omnivla_checkpoints.sh  download_omnivla_edge_checkpoints.sh  export_clip_text_onnx.py  export_omnivla_edge_onnx.py  gen_proto.sh  quantize_onnx.py  sim_control.py  sim_control.sh  vla.sh
src/: raspicat_description  raspicat_ros  raspicat_sim  raspicat_slam_navigation
src/raspicat_async_vla_edge/: package.xml  setup.cfg  setup.py
src/raspicat_async_vla_edge/asyncvla_edge/: edge_node.py  grpc_client.py  path_follower_node.py  preprocess.py
src/raspicat_async_vla_edge/config/: edge_params.yaml
src/raspicat_async_vla_edge/launch/: edge_only.launch.py
src/raspicat_async_vla_edge/test/: test_edge_node_smoke.py  test_grpc_client.py  test_preprocess.py
src/raspicat_async_vla_proto/: package.xml  setup.cfg  setup.py
src/raspicat_async_vla_proto/raspicat_async_vla_proto/: __init__.py
src/raspicat_async_vla_proto/test/: test_conversions.py
src/raspicat_async_vla_remote/asyncvla_remote/: dummy_server.py
src/raspicat_vla_bringup/: CMakeLists.txt  package.xml
src/raspicat_vla_bringup/config/: topic_remap.yaml
src/raspicat_vla_bringup/launch/: cmd_vel.launch.py  mvp_asyncvla.launch.py  mvp_local.launch.py  mvp_omnivla.launch.py  mvp_omnivla_edge.launch.py  mvp_omnivla_edge_remote.launch.py  mvp_sim.launch.py  raspicat_nav2_real.launch.py  raspicat_nav2_sim.launch.py  raspicat_slam_real.launch.py  raspicat_slam_sim.launch.py
src/raspicat_vla_edge/: package.xml  setup.cfg  setup.py
src/raspicat_vla_edge/config/: edge_params.yaml
src/raspicat_vla_edge/launch/: edge_only.launch.py  path_follower.launch.py
src/raspicat_vla_edge/raspicat_vla_edge/: edge_node.py  embedding_cache.py  grpc_client.py  omnivla_edge_engine.py  path_follower_node.py  preprocess.py  pure_pursuit.py  waypoint_pd.py
src/raspicat_vla_edge/raspicat_vla_edge/adapters/: asyncvla.py  base.py  omnivla_edge_local.py
src/raspicat_vla_edge/raspicat_vla_edge/models/: __init__.py  omnivla_edge_model.py
src/raspicat_vla_edge/test/: test_edge_node_smoke.py  test_embedding_cache.py  test_grpc_client.py  test_omnivla_edge_local_adapter.py  test_path_follower_hold.py  test_preprocess.py  test_pure_pursuit.py  test_waypoint_pd.py
src/raspicat_vla_msgs/: CMakeLists.txt  package.xml
src/raspicat_vla_msgs/action/: NavigateVLA.action
src/raspicat_vla_msgs/msg/: ActionEmbedding.msg  GoalSpec.msg
src/raspicat_vla_msgs/srv/: SetGoal.srv
src/raspicat_vla_proto/: package.xml  setup.cfg  setup.py
src/raspicat_vla_proto/raspicat_vla_proto/: __init__.py  conversions.py  raspicat_vla_pb2.py  raspicat_vla_pb2_grpc.py
src/raspicat_vla_proto/test/: test_conversions.py
src/raspicat_vla_remote/: package.xml  setup.cfg  setup.py
src/raspicat_vla_remote/config/: remote_params.yaml
src/raspicat_vla_remote/raspicat_vla_remote/: dummy_server.py  server_main.py
src/raspicat_vla_remote/raspicat_vla_remote/backends/: _checkpoints.py  asyncvla.py  omnivla_edge.py
src/raspicat_vla_remote/test/: test_asyncvla_engine_smoke.py  test_checkpoints.py  test_dummy_server.py  test_omnivla_edge_backend.py  test_omnivla_engine_smoke.py
tools/: publish_fake_image.py
(+6 files in other folders)
